force-app/main/default/objects/Kakao_User_Mapping__c/Kakao_User_Mapping__c.object-meta.xml
<CustomObject>
    <label>Kakao User Mapping</label>
    <nameField>
        <displayFormat>KUM-{00000000}</displayFormat>
        <label>Kakao User Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kakao User Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>