force-app/main/default/objects/Kakao_User_Mapping__c/fields/App_User_Id__c.field-meta.xml
<CustomField>
    <fullName>App_User_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>App User Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>