force-app/main/default/objects/Kakao_User_Mapping__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Kakao User Mapping</relationshipLabel>
    <relationshipName>Kakao_User_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>