force-app/main/default/objects/Kakao_User_Mapping__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>User Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>